--- a/src/css/app.less
+++ b/src/css/app.less
@@ -17,6 +17,7 @@
   --f7-theme-color-tint: #ff6259;
   --f7-page-bg-color: #02111b;
   --f7-text-editor-text-color: #fff;
+  --f7-input-text-color: #fff;
 }
 .device-android {
   --f7-page-transition-duration: 250ms;
