--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,7 +4,7 @@
   overflow: auto;
 }
 .item-info-img {
-  width: 350px;
+  width: 100%;
   height: 350px;
 }
 .item-info-option {
@@ -13,13 +13,15 @@
   flex-direction: column;
 }
 .info-title {
-  font-size: 2.8rem;
+  font-size: 2.4rem;
+  font-weight: 900;
+  margin-left: 5px;
 }
 .info-rate {
   font-size: 1.4rem;
 }
 .info-price {
-  font-size: 1.7rem;
+  font-size: 1rem;
   font-weight: 900;
   --tw-text-opacity: 1;
   color: rgba(245, 158, 11, var(--tw-text-opacity));
@@ -41,7 +43,7 @@
   font-size: 1.1rem;
   height: 2rem;
   color: #f3ead7;
-  border: 1px solid #c79a3a;
+  border-bottom: 1px solid #c79a3a;
   padding: 0.2rem;
   margin: 0.2rem;
 }
@@ -53,7 +55,8 @@
   font-size: 1.1rem;
   height: 2rem;
   color: #f3ead7;
-  border: 1px solid #c79a3a;
+  border-bottom: 1px solid #c79a3a;
+
   padding: 0.2rem;
   margin: 0.2rem;
 }
@@ -107,12 +110,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #ff3b30;
+  background-color: #0779e4;
   position: fixed;
   right: 3%;
   top: 7%;
   border-radius: 10px;
   padding: 5px;
+  z-index: 50;
 }
 .alarm-buy {
   width: 180px;
@@ -128,4 +132,13 @@
   top: 7%;
   border-radius: 10px;
   padding: 5px;
+  z-index: 50;
+}
+
+.bg-section {
+  left: 0;
+  bottom: -1px;
+  width: 100vh;
+  height: 180px;
+  background: linear-gradient(rgba(0, 0, 0, 0), black);
 }
