--- a/src/css/app.less
+++ b/src/css/app.less
@@ -6,15 +6,18 @@
 @import "swiper/components/pagination/pagination.less";
 @import "./items.less";
 /* iOS Cordova Tweak */
+
+// #032739
+
 .device-ios {
   height: 100vh;
 }
 
 :root {
-  --f7-theme-color: #ff3b30;
+  --f7-theme-color: #f3ead7;
   --f7-theme-color-rgb: 255, 59, 48;
-  --f7-theme-color-shade: #ff1407;
-  --f7-theme-color-tint: #ff6259;
+  --f7-theme-color-shade: #f3ead7;
+  --f7-theme-color-tint: #f3ead7;
   --f7-page-bg-color: #02111b;
   --f7-text-editor-text-color: #fff;
   --f7-input-text-color: #fff;
@@ -81,3 +84,24 @@
 #file {
   color: white;
 }
+.navbar-inner {
+  color: #f3ead7;
+  background-color: #02111b;
+  border-bottom: 2px solid rgb(108, 213, 255);
+}
+.toolbar-inner {
+  color: #f3ead7;
+  background-color: #02111b;
+}
+.tab-link-active {
+  // color: ;
+  border-top: 2px solid rgb(108, 213, 255);
+}
+// .tabbar-label {
+//   color: #f3ead7;
+//   opacity: 0.5;
+// }
+// .icon {
+//   color: #f3ead7;
+//   opacity: 0.5;
+// }
