--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -142,3 +142,7 @@
   height: 180px;
   background: linear-gradient(rgba(0, 0, 0, 0), black);
 }
+
+#discount {
+  background: linear-gradient(#7f0606, #3b0303);
+}
