--- a/src/css/app.less
+++ b/src/css/app.less
@@ -97,6 +97,8 @@
   // color: ;
   border-top: 2px solid rgb(108, 213, 255);
 }
+.f7-icons {
+}
 // .tabbar-label {
 //   color: #f3ead7;
 //   opacity: 0.5;
