--- a/src/css/app.less
+++ b/src/css/app.less
@@ -87,23 +87,18 @@
 .navbar-inner {
   color: #f3ead7;
   background-color: #02111b;
-  border-bottom: 2px solid rgb(108, 213, 255);
+  border-bottom: 2px solid #f3ead7;
 }
 .toolbar-inner {
   color: #f3ead7;
   background-color: #02111b;
 }
 .tab-link-active {
-  // color: ;
-  border-top: 2px solid rgb(108, 213, 255);
+  border-top: 2px solid #f3ead7;
 }
-.f7-icons {
+.tabbar-label {
+  color: #f3ead7;
 }
-// .tabbar-label {
-//   color: #f3ead7;
-//   opacity: 0.5;
-// }
-// .icon {
-//   color: #f3ead7;
-//   opacity: 0.5;
-// }
+.icon {
+  color: #f3ead7;
+}
