--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -141,7 +141,7 @@
   width: 100vh;
   height: 180px;
   background: #02111b;
-  border-top: 2px solid rgb(108, 213, 255);
+  border-top: 2px solid #f3ead7;
 }
 
 #discount {
