--- a/src/css/app.less
+++ b/src/css/app.less
@@ -14,13 +14,13 @@
 }
 
 :root {
-  --f7-theme-color: #f3ead7;
+  --f7-theme-color: #ffffff;
   --f7-theme-color-rgb: 255, 59, 48;
-  --f7-theme-color-shade: #f3ead7;
-  --f7-theme-color-tint: #f3ead7;
-  --f7-page-bg-color: #02111b;
-  --f7-text-editor-text-color: #fff;
-  --f7-input-text-color: #fff;
+  --f7-theme-color-shade: #ffffff;
+  --f7-theme-color-tint: #ffffff;
+  --f7-page-bg-color: #011019;
+  --f7-text-editor-text-color: #ffffff;
+  --f7-input-text-color: #ffffff;
 }
 .device-android {
   --f7-page-transition-duration: 250ms;
@@ -85,19 +85,19 @@
   color: white;
 }
 .navbar-inner {
-  color: #f3ead7;
-  background-color: #02111b;
-  border-bottom: 2px solid #f3ead7;
+  color: #ffffff;
+  background-color: #011019;
+  border-bottom: 2px solid #ffffff;
 }
 .toolbar-inner {
-  color: #f3ead7;
-  background-color: #02111b;
+  color: #ffffff;
+  background-color: #011019;
 }
 .tab-link-active {
-  border-top: 2px solid #f3ead7;
+  border-top: 2px solid #ffffff;
 }
 .tabbar-label {
-  color: #f3ead7;
+  color: #ffffff;
 }
 .icon {
   color: #f3ead7;
