--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -140,8 +140,8 @@
   bottom: -1px;
   width: 100vh;
   height: 180px;
-  background: #02111b;
-  border-top: 2px solid #f3ead7;
+  /* background: #02111b; */
+  /* border-top: 2px solid #f3ead7; */
 }
 
 #discount {
